# falsecolor

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  README.md  falsecolor.cpp  falsecolor.py
src/: falsecolor.cpp  fit.cpp  fit.hpp  image.cpp  image.hpp  main.rs  random.hpp  smudge.cpp  smudge.hpp
